Fix temp alignment and mouse over events@

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -22,6 +22,10 @@ body {
   border-radius: 4px;
 }
 
+.temp {
+  margin-top: 5px;
+}
+
 .day {
   padding-top: 15px;
   height: 75px;
@@ -32,7 +36,8 @@ body {
 .icon{
   max-height: 50px;
   max-width: 50px;
-  margin: auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .greyscale {
@@ -113,5 +118,4 @@ body {
 
   z-index: -1;
 }
-
 
